--- a/org/pages/index.org
+++ b/org/pages/index.org
@@ -13,7 +13,7 @@
 #+attr_html: :id ID_picture
 [[file:images/identity/gv_id_gnupg.jpg]]
 
-👋 Hi, my name is [[file:ghislainv.html][Ghislain Vieilledent]]. I am an ecologist at [[https://www.cirad.fr][Cirad]], a French research center working with developing countries to tackle environmental and development issues. I am a member of the [[https://amap.cirad.fr][UMR AMAP]] joint research unit based in [[https://en.wikipedia.org/wiki/Montpellier][Montpellier]] (South of France). I have a [[file:ghislainv.html#background][background]] in biology and mathematics. My [[file:research.html][research]] focuses mainly on [[https://en.wikipedia.org/wiki/Tropical_forest][tropical forests]] 🌿🌳🌴. More particularly, I try to understand better the role of tropical forests in the global [[https://en.wikipedia.org/wiki/Carbon_cycle][carbon cycle]] ♻ and the impact of [[https://en.wikipedia.org/wiki/Climate_change][climate change]] ⛅🌡and [[https://en.wikipedia.org/wiki/Deforestation][land-use change]] 🚜🔥 on tropical forest [[https://en.wikipedia.org/wiki/Biodiversity][biodiversity]] 🌱🐦🦍🐞. I publish scientific [[file:publications.html][papers]] in [[https://en.wikipedia.org/wiki/Community_(ecology)][community ecology]], [[https://en.wikipedia.org/wiki/Conservation_biology][conservation biology]], and [[https://en.wikipedia.org/wiki/Statistics#Applications][applied statistics]]. For my research, I analyze data that are collected in the tropics. I also develop [[https://en.wikipedia.org/wiki/Theoretical_ecology][theoretical models]] to test new hypothesis in ecology. I use various statistical and computer tools to do so (including [[https://www.r-project.org/][R]] and [[https://www.python.org/][Python]]) 📊💻. My field work takes place mainly in Madagascar (where I have lived for three years), French Guiana, and New Caledonia (where I am currently based). I spend most of my time writing [[file:software.html][code]] and [[file:publications.html][papers]] with [[https://www.gnu.org/software/emacs/][Emacs]], and supervising Master and PhD [[file:people.html][students]]. Major part of my research is done in collaboration with my [[file:people.html][students]] or [[file:people.html#collaborators][fellow researchers]]. This website aims at presenting a broad view of these research activities.
+👋 Hi, my name is [[file:ghislainv.html][Ghislain Vieilledent]]. I am an ecologist at [[https://www.cirad.fr][Cirad]], a French research center working with developing countries to tackle environmental and development issues. I am a member of the [[https://amap.cirad.fr][UMR AMAP]] joint research unit based in [[https://en.wikipedia.org/wiki/Montpellier][Montpellier]] (South of France). I have a [[file:ghislainv.html#background][background]] in biology and mathematics. My [[file:research.html][research]] focuses mainly on [[https://en.wikipedia.org/wiki/Tropical_forest][tropical forests]] 🌿🌳🌴. More particularly, I try to understand better the role of tropical forests in the global [[https://en.wikipedia.org/wiki/Carbon_cycle][carbon cycle]] ♻ and the impact of [[https://en.wikipedia.org/wiki/Climate_change][climate change]] ⛅🌡and [[https://en.wikipedia.org/wiki/Deforestation][land-use change]] 🚜🔥 on tropical forest [[https://en.wikipedia.org/wiki/Biodiversity][biodiversity]] 🌱🐦🦍🐞. I publish scientific [[file:publications.html][papers]] in [[https://en.wikipedia.org/wiki/Community_(ecology)][community ecology]], [[https://en.wikipedia.org/wiki/Conservation_biology][conservation biology]], and [[https://en.wikipedia.org/wiki/Statistics#Applications][applied statistics]]. For my research, I analyze data that are collected in the tropics. I also develop [[https://en.wikipedia.org/wiki/Theoretical_ecology][theoretical models]] to test new hypothesis in ecology. I use various statistical and computer tools to do so (including [[https://www.r-project.org/][R]] and [[https://www.python.org/][Python]]) 📊💻. My field work takes place mainly in Madagascar (where I have lived for three years), French Guiana, and New Caledonia (where I have lived for two years). I spend most of my time writing [[file:software.html][code]] and [[file:publications.html][papers]] with [[https://www.gnu.org/software/emacs/][Emacs]], and supervising Master and PhD [[file:people.html][students]]. Major part of my research is done in collaboration with my [[file:people.html][students]] or [[file:people.html#collaborators][fellow researchers]]. This website aims at presenting a broad view of these research activities.
 
 ** Group                                                          :noexport:
 :PROPERTIES:
