--- a/org/pages/publications.org
+++ b/org/pages/publications.org
@@ -51,7 +51,8 @@
 :CUSTOM_ID: yr2026
 :END:
 
-[56]. *Fischer F. J., J. Chave, A. Zanne, T. Jucker, A. Fajardo, A. Fayolle, R. A. Ferreira de Lima, G. Vieilledent, and coauthors.* Beyond species means -- the intraspecific contribution to global wood density variation. /New Phytologist/. {{{doi(10.1111/nph.70860)}}}.
+[56]. *Fischer F. J., J. Chave, A. Zanne, T. Jucker, A. Fajardo, A. Fayolle, R. A. Ferreira de Lima, G. Vieilledent, and coauthors.* Beyond species means -- the intraspecific contribution to global wood density variation. /New Phytologist/.
+{{{doi(10.1111/nph.70860)}}}. {{{pdf(Fischer2026-NewPhytologist.pdf)}}}, Supplementary materials {{{supp(Fischer2026-NewPhytologist-SM.pdf)}}} {{{altm(10.1111/nph.70860)}}}
 
 *** 2025
 :PROPERTIES:
